--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <div class="container">
             <div class="row text-justify">
                 <div class="col-lg-12 text-center">
-                    <h2 class="text-uppercase section-heading" style="color: rgb(154,254,54);">our SERVICES</h2>
-                    <h3 class="section-heading" style="font-size: 28px;font-weight: 700;color: rgb(154,254,54);">WE ASSIST CLIENTS FOR . . .</h3>
+                    <h2 class="text-uppercase section-heading" style="color: rgb(154,254,54);font-family: Montserrat, sans-serif;">our SERVICES</h2>
+                    <h3 class="section-heading" style="font-size: 28px;font-weight: 700;color: rgb(154,254,54);font-family: Montserrat, sans-serif;">WE ASSIST CLIENTS FOR . . .</h3>
                     <h3 class="section-heading" style="font-size: 28px;font-weight: 700;"></h3>
                     <p class="section-heading" style="font-size: 28px;font-weight: 700;"></p>
                     <h3 class="section-heading" style="font-size: 28px;font-weight: 700;"></h3>
                     <h3 class="section-heading" style="font-size: 28px;font-weight: 700;"></h3>
                 </div>
-                <div class="col-lg-12 col-xl-6" style="margin-right: 0px;margin-left: 0px;padding: 0px;padding-left: 0px;">
+                <div class="col-lg-6 col-xl-6" style="margin-right: 0px;margin-left: 0px;padding: 0px;padding-left: 0px;">
                     <ul style="font-size: 19px;font-weight: 500;margin-bottom: 0px;">
                         <li>Buying &amp; Selling<br></li>
                         <li>Leasing - Residential<br></li>
@@ -60,7 +60,7 @@
                         <li>Business loans<br></li>
                     </ul>
                 </div>
-                <div class="col-lg-12 col-xl-6" style="padding-left: 0px;">
+                <div class="col-lg-6 col-xl-6" style="padding-left: 0px;">
                     <ul style="font-size: 19px;font-weight: 500;">
                         <li>To provide Facility Management services for Corporate<br></li>
                         <li>NRI<br></li>
@@ -71,7 +71,7 @@
                     </ul>
                 </div>
                 <div class="col text-center" style="padding-bottom: 14px;padding-top: 14px;">
-                    <h3 class="section-heading" style="font-size: 30px;font-weight: 700;color: rgb(154,254,54);">OUR PRODUCTS</h3>
+                    <h3 class="section-heading" style="font-size: 30px;font-weight: 700;color: rgb(154,254,54);font-family: Montserrat, sans-serif;">OUR PRODUCTS</h3>
                 </div>
             </div>
             <div class="row">
@@ -117,20 +117,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="text-uppercase section-heading" style="font-size: 30px;color: rgb(154,254,54);">Realty</h2>
+                    <h2 class="text-uppercase section-heading" style="font-size: 30px;color: rgb(154,254,54);font-family: Montserrat, sans-serif;">Realty</h2>
                 </div>
             </div>
             <div class="row text-center">
-                <div class="col-md-4"><span class="fa-stack fa-4x" style="width: 100px;"><img src="assets/img/realty/Godrej-Logo.png" style="width: 120px;height: 90px;"></span>
+                <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3"><span class="fa-stack fa-4x" style="width: 100px;"><img src="assets/img/realty/Godrej-Logo.png" style="width: 120px;height: 90px;"></span>
                     <h4 class="section-heading">Godrej Realty</h4>
                 </div>
-                <div class="col-md-4"><span class="fa-stack fa-4x"><img src="assets/img/realty/L&T-logo.png" style="width: 100px;"></span>
-                    <h4 class="section-heading">L &amp; T Realty</h4>
+                <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3"><span class="fa-stack fa-4x"><img src="assets/img/realty/L&T-logo.png" style="width: 100px;"></span>
+                    <h4 class="section-heading">&nbsp;L &amp; T&nbsp; Realty</h4>
                 </div>
-                <div class="col-md-4"><span class="fa-stack fa-4x"><img src="assets/img/realty/tata-logo.png" style="width: 100px;height: 100px;"></span>
-                    <h4 class="section-heading">Web Security</h4>
+                <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3"><span class="fa-stack fa-4x"><img src="assets/img/realty/tata-logo.png" style="width: 100px;height: 100px;"></span>
+                    <h4 class="section-heading">&nbsp; Tata&nbsp; Realty</h4>
                 </div>
-                <div class="col-md-12 col-lg-12"><span class="fa-stack fa-4x"><img src="assets/img/realty/piramal-logo.png" style="width: 100px;height: 100px;"></span>
+                <div class="col-sm-6 col-md-3 col-lg-3 col-xl-3"><span class="fa-stack fa-4x"><img src="assets/img/realty/piramal-logo.png" style="width: 100px;height: 100px;"></span>
                     <h4 class="section-heading">Piramal Realty</h4>
                 </div>
             </div>
