--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                 <div class="row" style="margin: -47px;margin-top: -110px;margin-bottom: -124px;">
                     <div class="col-sm-12 col-md-6 col-lg-3 offset-0 text-center footer-navigation" style="color: rgb(154,254,54);">
                         <h3 style="font-size: 40px;color: rgb(154,254,54);">Menu</h3>
-                        <p class="links" style="font-size: 21px;">▶ About Us</p>
+                        <p class="links" style="font-size: 21px;"><a class="js-scroll-trigger bac" href="#about" style="font-weight: 500;"><strong>▶ About Us</strong></a></p>
                         <p class="links" style="font-size: 21px;">▶ Career</p>
                     </div>
                     <div class="col-sm-12 col-md-6 col-lg-6 text-left footer-contacts" style="color: rgb(154,254,54);">
