--- a/index.html
+++ b/index.html
@@ -22,25 +22,9 @@
     <link rel="stylesheet" href="assets/css/Pretty-Footer.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Testimonials.css">
-    <link rel="stylesheet" href="assets/css/THANOS_website_series_part_div_preloader.css">
 </head>
 
-<body id="page-top" style="background-color: #ffffffffffff;"><div id="DivPreloader" class="div-preloader">
-	<div class="display-cell">
-		<div class="div-caption">
-			Guava Realty
-		</div>
-		<div class="cssload-thecube">
-			<div class="cssload-cube cssload-c1"></div>
-			<div class="cssload-cube cssload-c2"></div>
-			<div class="cssload-cube cssload-c4"></div>
-			<div class="cssload-cube cssload-c3"></div>
-		</div>
-		<div class="div-loading">
-			Loading website ...
-		</div>
-	</div>
-</div>
+<body id="page-top" style="background-color: #ffffffffffff;">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
         <div class="container"><a class="navbar-brand" href="#page-top" style="color: rgb(154,254,54);">Guava Realty</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" data-toogle="collapse" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation" style="background-color: rgb(154,254,54);"><i class="fa fa-bars"></i></button>
@@ -450,7 +434,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
     <script src="assets/js/agency.js"></script>
     <script src="assets/js/Card-hover-affect-2.js"></script>
-    <script src="assets/js/THANOS_website_series_part_div_preloader.js"></script>
 </body>
 
 </html>
