--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
             </p>
 
-            <p class="title">We assist clients for...</p>
+            <!-- <p class="title">We assist clients for...</p>
             <div id="assist">
                 <div id="assist_left">
                     <ul>
@@ -149,7 +149,7 @@
                         </li>
                     </ul>
                 </div>
-            </div>
+            </div> -->
 
 
         </section>
