--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/Testimonials.css">
 </head>
 
-<body id="page-top" style="background-color: #ffffffffffff;">
+<body id="page-top" style="background-color: #ffff;">
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
         <div class="container"><a class="navbar-brand" href="#page-top" style="color: rgb(154,254,54);">Guava Realty</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" data-toogle="collapse" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation" style="background-color: rgb(154,254,54);"><i class="fa fa-bars"></i></button>
@@ -42,11 +42,11 @@
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background-image: url('assets/img/loan/bg.jpg');">
+    <header class="masthead" style="background-image: url('assets/img/loan/bg-1.jpg');">
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in"><span style="color: rgb(0,0,0);font-family: 'Droid Serif';">Welcome To Guava Realty!</span></div>
-                <div class="intro-heading text-uppercase" style="color: rgb(0,0,0);"><span style="color: rgb(0,0,0);font-family: 'Droid Serif';font-style: normal;">HAPPy TO HELP You!</span></div>
+                <div class="intro-lead-in"><span style="color: rgb(255,255,255);font-family: 'Droid Serif';">Welcome To Guava Realty!</span></div>
+                <div class="intro-heading text-uppercase" style="color: rgb(255,255,255);"><span style="color: rgb(255,255,255);font-family: 'Droid Serif';font-style: normal;">HAPPY TO HELP You!</span></div>
             </div>
         </div>
     </header>
@@ -218,7 +218,7 @@
                     <h2 class="text-uppercase section-heading" style="font-family: Montserrat, sans-serif;font-weight: 700;color: rgb(0,0,0);"><strong>Agent Finder</strong><br></h2>
                     <div class="row">
                         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3 offset-2 offset-sm-0 offset-md-0 offset-lg-0 offset-xl-0">
-                            <div class="text-center border rounded shadow-lg profile-box" style="width: 200px;height: 300px;background-color: #ffffff;margin: 5px;">
+                            <div class="text-center border rounded shadow-lg profile-box" style="width: 200px;height: 300px;background-color: #ffffff;margin: 5px; ">
                                 <div style="height: 50px;background-image: url(&quot;assets/img/bg-pattern.png&quot;);background-color: rgba(54,162,177,0);"></div>
                                 <div><img class="rounded-circle" src="assets/img/bg-cta.jpg" width="60px" height="60px" style="background-color: rgb(255,255,255);padding: 2px;"></div>
                                 <div style="height: 80px;">
@@ -418,9 +418,9 @@
                         </div>
                     </div>
                     <div class="clearfix"></div>
-                    <div class="col-md-12 col-lg-3 col-xl-6 text-center footer-about">
+                    <div class="col-md-12 col-lg-3 col-xl-6 text-center footer-about" style="margin-top: auto;margin-bottom: auto;">
                         <h1 class="text-center" style="font-family: Cookie, cursive;font-weight: 400;color: rgb(255,255,255);">Social Media</h1>
-                        <div class="social-links social-icons" style="margin: 13px;padding: 26px;"><a href="#" style="margin: 7px;"><i class="fa fa-facebook"></i></a><a href="#" style="margin: 7px;"><i class="fa fa-twitter"></i></a><a href="#" style="margin: 7px;"><i class="fa fa-linkedin"></i></a><a href="#" style="margin: 7px;"><i class="fa fa-youtube"></i></a></div>
+                        <div class="social-links social-icons"><a href="#" style="margin: 7px;"><i class="fa fa-facebook"></i></a><a href="#" style="margin: 7px;"><i class="fa fa-twitter"></i></a><a href="#" style="margin: 7px;"><i class="fa fa-linkedin"></i></a><a href="#" style="margin: 7px;"><i class="fa fa-youtube"></i></a></div>
                     </div>
                     <div class="col text-center text-sm-center text-md-center text-lg-center text-xl-center">
                         <p class="lead text-center company-name" style="margin: 25px;color: rgb(255,255,255);">All Rights Reserved. Copyright © 2020 GuavaRealty.com </p>
