--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html style="background-color: rgb(177,245,109);overflow-x: hidden;">
+<html style="background-color: rgb(177,245,109);">
 
 <head>
     <meta charset="utf-8">
