--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html style="background-color: rgb(177,245,109);">
-
+<html lang="en" style="overflow-x: auto;">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Guava Realty</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,700">
@@ -23,10 +22,9 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Testimonials.css">
 </head>
-
-<body id="page-top" style="background-color: #ffff;">
+<body>
     <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
-        <div class="container"><a class="navbar-brand" href="#page-top" style="color: rgb(154,254,54);">Guava
+        <div class="container-fluid"><a class="navbar-brand" href="#page-top" style="color: rgb(154,254,54);">Guava
                 Realty</a><button data-toggle="collapse" data-target="#navbarResponsive"
                 class="navbar-toggler navbar-toggler-right" type="button" data-toogle="collapse"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"
@@ -604,5 +602,7 @@
     <script src="assets/js/agency.js"></script>
     <script src="assets/js/Card-hover-affect-2.js"></script>
 </body>
-
 </html>
+
+
+
