--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="overflow-x: auto;">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="assets/css/Testimonials.css">
 </head>
 <body>
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
+    <nav class="navbar navbar-dark navbar-expand-lg sticky-top bg-dark" id="mainNav">
         <div class="container-fluid"><a class="navbar-brand" href="#page-top" style="color: rgb(154,254,54);">Guava
                 Realty</a><button data-toggle="collapse" data-target="#navbarResponsive"
                 class="navbar-toggler navbar-toggler-right" type="button" data-toogle="collapse"
