--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<style>
+    html {
+        overflow-x: hidden;
+    }
+   
+    body {
+        overflow-y: hidden;
+    }
+</style>
 <!DOCTYPE html>
-<html style="background-color: rgb(177,245,109);">
+
+<html style="background-color: rgb(255, 255, 255);">
 
 <head>
     <meta charset="utf-8">
@@ -24,8 +34,8 @@
     <link rel="stylesheet" href="assets/css/Testimonials.css">
 </head>
 
-<body id="page-top" style="background-color: #ffffffffffff;">
-    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
+<body id="page-top" style="background-color: #ffffffff;">
+    <nav class="navbar navbar-dark navbar-expand-lg sticky-top bg-dark" id="mainNav">
         <div class="container"><a class="navbar-brand" href="#page-top" style="color: rgb(154,254,54);">Guava Realty</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" data-toogle="collapse" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation" style="background-color: rgb(154,254,54);"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -81,7 +91,6 @@
     <h3>BUY</h3>
     
   </figcaption>
-  <a href="#"></a>
 </figure>
 </div></section>
                 </div>
@@ -91,7 +100,6 @@
   <figcaption>
     <h3>SELL</h3>
   </figcaption>
-  <a href="#"></a>
 </figure>
 </div></section>
                 </div>
@@ -102,7 +110,6 @@
     <h3>LEASE</h3>
     
   </figcaption>
-  <a href="#"></a>
 </figure>
 </div></section>
                 </div>
@@ -113,7 +120,6 @@
     <h3>LOAN</h3>
    
   </figcaption>
-  <a href="#"></a>
 </figure>
 </div></section>
                 </div>
@@ -123,7 +129,6 @@
   <figcaption>
     <h3 style="font-size: 20px">INSURANCE</h3>
   </figcaption>
-  <a href="#"></a>
 </figure>
 </div></section>
                 </div>
@@ -133,7 +138,6 @@
   <figcaption>
     <h3 style="font-size: 20px">INTERIOR</h3>
   </figcaption>
-  <a href="#"></a>
 </figure>
 </div></section>
                 </div>
