--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <h1 class="text-uppercase" style="color: rgb(0,0,0);">about us</h1>
                 </div>
             </div>
-            <p class="text-center section-heading" style="font-size: 20px;font-weight: 500;">Guava Realty Solutions Pvt
+            <p class="text-center section-heading" style="font-size: 1.3rem;font-weight: 500;">Guava Realty Solutions Pvt
                 Ltd was incorporated on 9th February 2019 as a start up venture capital.&nbsp;<br><br>We are having an
                 expert team who provides consultancy for Realties | Loans | Insurances | Interiors.&nbsp;<br><br>Our
                 organizational
@@ -92,7 +92,7 @@
                 the industry.<br><br>|| Believe in quality | Believe in us ||<br><br></p>
         </div>
     </section>
-    <section id="services" style="padding-top: 50px;padding-bottom: 50px;">
+    <section id="services" style="margin-top: 1em;margin-bottom: 1em;">
         <div class="container">
             <div class="row text-justify">
                 <div class="col-lg-12 text-center">
@@ -299,7 +299,7 @@
                         <div
                             class="col-sm-6 col-md-4 col-lg-3 col-xl-3 offset-2 offset-sm-0 offset-md-0 offset-lg-0 offset-xl-0">
                             <div class="text-center border rounded shadow-lg profile-box"
-                                style="width: 200px;height: 300px;background-color: #ffffff;margin: 5px; ">
+                                style="width: 15em;height: 18em;background-color: #ffffff;margin: 5px; ">
                                 <div
                                     style="height: 50px;background-image: url(&quot;assets/img/bg-pattern.png&quot;);background-color: rgba(54,162,177,0);">
                                 </div>
@@ -315,7 +315,7 @@
                         <div
                             class="col-sm-6 col-md-4 col-lg-3 col-xl-3 offset-2 offset-sm-0 offset-md-0 offset-lg-0 offset-xl-0">
                             <div class="text-center border rounded shadow-lg profile-box"
-                                style="width: 200px;height: 300px;background-color: #ffffff;margin: 5px;">
+                                style="width: 15em;height: 18em;background-color: #ffffff;margin: 5px;">
                                 <div
                                     style="height: 50px;background-image: url(&quot;assets/img/bg-pattern.png&quot;);background-color: rgba(54,162,177,0);">
                                 </div>
@@ -331,7 +331,7 @@
                         <div
                             class="col-sm-6 col-md-4 col-lg-3 col-xl-3 offset-2 offset-sm-0 offset-md-0 offset-lg-0 offset-xl-0">
                             <div class="text-center border rounded shadow-lg profile-box"
-                                style="width: 200px;height: 300px;background-color: #ffffff;margin: 5px;">
+                                style="width: 15em;height: 18em;background-color: #ffffff;margin: 5px;">
                                 <div
                                     style="height: 50px;background-image: url(&quot;assets/img/bg-pattern.png&quot;);background-color: rgba(54,162,177,0);">
                                 </div>
@@ -347,7 +347,7 @@
                         <div
                             class="col-sm-6 col-md-12 col-lg-3 col-xl-3 offset-2 offset-sm-0 offset-md-4 offset-lg-0 offset-xl-0">
                             <div class="border rounded shadow-lg profile-box"
-                                style="width: 200px;height: 300px;background-color: #ffffff;margin: 5px;">
+                                style="width: 15em;height: 18em;background-color: #ffffff;margin: 5px;">
                                 <div
                                     style="height: 50px;background-image: url(&quot;assets/img/bg-pattern.png&quot;);background-color: rgba(54,162,177,0);">
                                 </div>
