--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body id="page-top" style="background-color: #ffffff;">
-    <nav class="navbar navbar-dark navbar-expand-lg sticky-top bg-dark" id="mainNav">
+    <nav class="navbar navbar-dark navbar-expand-lg fixed-top bg-dark" id="mainNav">
         <div class="container"><a class="navbar-brand" href="#page-top" style="color: rgb(154,254,54);">Guava Realty</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler navbar-toggler-right" type="button" data-toogle="collapse" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation" style="background-color: rgb(154,254,54);"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
